start the nav header

--- a/index.html
+++ b/index.html
@@ -4,11 +4,35 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
 </head>
 <body>
     <div class="top-header">
         <p>beauty skin in our salon is the best for you</p>
+    </div>
+    <div class="nav-header">
+        <div class="nav-header-left">
+            <span class="fa fa-search"></span>
+            <a href="#">Sign up</a>
+        </div>
+        <div class="nav-header-center">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <h1>GLOWING</h1>
+                <li><a href="#">Experience</a></li>
+                <li><a href="#">Info</a></li>
+            </ul>
+        </div>
+        <div class="nav-header-right">
+            <span class="fa fa-user"></span>
+            <span class="fa fa-star"></span>
+            <span class="fa fa-envelope"></span>
+        </div>
     </div>
 </body>
 </html>
