--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <h1>GLOWING</h1>
                 <li><a href="#">Experience</a></li>
                 <li><a href="#">Info</a></li>
+                <li><a href="#">More</a></li>
             </ul>
         </div>
         <div class="nav-header-right">
