add img to background of header

--- a/index.html
+++ b/index.html
@@ -35,5 +35,8 @@
             <span class="fa fa-envelope"></span>
         </div>
     </div>
+    <div class="header">
+        
+    </div>
 </body>
 </html>
