--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
         </div>
     </div>
     <div class="header">
-        
+        <p>New Collection</p>
+        <h3>Get The Skin You Want To Feel</h3>
+        <a href="#">Shop</a>
     </div>
 </body>
 </html>
