--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
         </div>
     </div>
     <div class="header">
+        <div>
         <p>New Collection</p>
         <h3>Get The Skin You Want To Feel</h3>
         <a href="#">Shop</a>
+        </div>
     </div>
 </body>
 </html>
