style the main div

--- a/index.html
+++ b/index.html
@@ -42,5 +42,11 @@
         <a href="#">Shop</a>
         </div>
     </div>
+    <main>
+        <div>
+        <h1>Shop by Categories</h1>
+        <p>Lorem ipsum dolor sit amet consectetur</p>
+    </div>
+    </main>
 </body>
 </html>
