--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
         <h1>Shop by Categories</h1>
         <p>Lorem ipsum dolor sit amet consectetur</p>
     </div>
+    <div class="gallery">
+        <img src="img/header.jpg" alt="gallery" width="100">
+        <img src="img/header.jpg" alt="gallery" width="100">
+        <img src="img/header.jpg" alt="gallery" width="100">
+        <img src="img/header.jpg" alt="gallery" width="100">
+    </div>
     </main>
 </body>
 </html>
