--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
         <p>Lorem ipsum dolor sit amet consectetur</p>
     </div>
     <div class="gallery">
-        <img src="img/header.jpg" alt="gallery" width="100">
-        <img src="img/header.jpg" alt="gallery" width="100">
-        <img src="img/header.jpg" alt="gallery" width="100">
-        <img src="img/header.jpg" alt="gallery" width="100">
+        <img src="img/header.jpg" alt="gallery">
+        <img src="img/header.jpg" alt="gallery">
+        <img src="img/header.jpg" alt="gallery">
+        <img src="img/header.jpg" alt="gallery">
     </div>
     </main>
 </body>
