add images to gallery

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
         <p>Lorem ipsum dolor sit amet consectetur</p>
     </div>
     <div class="gallery">
-        <img src="img/header.jpg" alt="gallery">
-        <img src="img/header.jpg" alt="gallery">
-        <img src="img/header.jpg" alt="gallery">
-        <img src="img/header.jpg" alt="gallery">
+        <img src="img/gallery2.jpg" alt="gallery">
+        <img src="img/gallery1.jpg" alt="gallery">
+        <img src="img/gallery4.jpg" alt="gallery">
+        <img src="img/gallery3.jpg" alt="gallery">
     </div>
     </main>
 </body>
