add and change images of gallery

--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
     </div>
     <main>
         <div>
-        <h1>Shop by Categories</h1>
+        <h1>Hair And Style</h1>
         <p>Lorem ipsum dolor sit amet consectetur</p>
     </div>
     <div class="gallery">
-        <img src="img/gallery2.jpg" alt="gallery">
-        <img src="img/gallery1.jpg" alt="gallery">
-        <img src="img/gallery4.jpg" alt="gallery">
-        <img src="img/gallery3.jpg" alt="gallery">
+        <img src="img/hair2.jpg" alt="gallery">
+        <img src="img/hair3.jpg" alt="gallery">
+        <img src="img/hair4.jpg" alt="gallery">
+        <img src="img/hair1.jpg" alt="gallery">
     </div>
     </main>
 </body>
