--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="top-header">
-        <p>beauty skin in our salon is the best for you</p>
+        <p>beauty style in our salon is the best for you</p>
     </div>
     <div class="nav-header">
         <div class="nav-header-left">
@@ -38,7 +38,7 @@
     <div class="header">
         <div>
         <p>New Collection</p>
-        <h3>Get The Skin You Want To Feel</h3>
+        <h3>Get The Best You Want To Feel</h3>
         <a href="#">Shop</a>
         </div>
     </div>
