--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="header">
         <div>
         <p>New Collection</p>
-        <h3>Get The Best You Want To Feel</h3>
+        <h3>Get The Skin You Want To Feel</h3>
         <a href="#">Shop</a>
         </div>
     </div>
