add sell and h1 and p

--- a/index.html
+++ b/index.html
@@ -54,5 +54,11 @@
         <img src="img/hair1.jpg" alt="gallery">
     </div>
     </main>
+    <div class="sell">
+         <div>
+        <h1>Our Bestsellers</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum tempore dolorum illo!</p>
+    </div>
+    </div>
 </body>
 </html>
