add and start the products

--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
 </head>
+
 <body>
     <div class="top-header">
         <p>beauty style in our salon is the best for you</p>
@@ -37,28 +39,42 @@
     </div>
     <div class="header">
         <div>
-        <p>New Collection</p>
-        <h3>Get The Skin You Want To Feel</h3>
-        <a href="#">Shop</a>
+            <p>New Collection</p>
+            <h3>Get The Skin You Want To Feel</h3>
+            <a href="#">Shop</a>
         </div>
     </div>
     <main>
         <div>
-        <h1>Hair And Style</h1>
-        <p>Lorem ipsum dolor sit amet consectetur</p>
-    </div>
-    <div class="gallery">
-        <img src="img/hair2.jpg" alt="gallery">
-        <img src="img/hair3.jpg" alt="gallery">
-        <img src="img/hair4.jpg" alt="gallery">
-        <img src="img/hair1.jpg" alt="gallery">
-    </div>
+            <h1>Hair And Style</h1>
+            <p>Lorem ipsum dolor sit amet consectetur</p>
+        </div>
+        <div class="gallery">
+            <img src="img/hair2.jpg" alt="gallery">
+            <img src="img/hair3.jpg" alt="gallery">
+            <img src="img/hair4.jpg" alt="gallery">
+            <img src="img/hair1.jpg" alt="gallery">
+        </div>
     </main>
     <div class="sell">
-         <div>
-        <h1>Our Bestsellers</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum tempore dolorum illo!</p>
-    </div>
+        <div>
+            <h1>Our Bestsellers</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum tempore dolorum illo!</p>
+        </div>
+        <div class="products">
+            <div class="card">
+                <img src="img/hair1.jpg" width="100">
+                <p>22-45-77</p>
+                <h3>Lorem ipsum dolor sit</h3>
+                <div class="stars">
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
+
 </html>
