--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
         </div>
         <div class="products">
             <div class="card">
+                <div class="imgbox">
                 <img src="img/hair1.jpg" width="100">
+            </div>
                 <p>22-45-77</p>
                 <h3>Lorem ipsum dolor sit</h3>
                 <div class="stars">
