--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
     </main>
     <div class="sell">
-        <div>
+        <div class="title">
             <h1>Our Bestsellers</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum tempore dolorum illo!</p>
         </div>
@@ -75,6 +75,46 @@
                     <span class="fa fa-star"></span>
                 </div>
             </div>
+            <div class="card">
+                <div class="imgbox">
+                <img src="img/hair1.jpg" width="100">
+            </div>
+                <p>22-45-77</p>
+                <h3>Lorem ipsum dolor sit</h3>
+                <div class="stars">
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                </div>
+            </div>
+            <div class="card">
+                <div class="imgbox">
+                <img src="img/hair1.jpg" width="100">
+            </div>
+                <p>22-45-77</p>
+                <h3>Lorem ipsum dolor sit</h3>
+                <div class="stars">
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                </div>
+            </div>
+            <div class="card">
+                <div class="imgbox">
+                <img src="img/hair1.jpg" width="100">
+            </div>
+                <p>22-45-77</p>
+                <h3>Lorem ipsum dolor sit</h3>
+                <div class="stars">
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                </div>
+            </div>
+            
         </div>
     </div>
 </body>
