--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="products">
             <div class="card">
                 <div class="imgbox">
-                <img src="img/hair1.jpg" width="100">
+                <img src="img/p1.png" width="100">
             </div>
                 <p>22-45-77</p>
                 <h3>Lorem ipsum dolor sit</h3>
@@ -77,7 +77,7 @@
             </div>
             <div class="card">
                 <div class="imgbox">
-                <img src="img/hair1.jpg" width="100">
+                <img src="img/p2.png" width="100">
             </div>
                 <p>22-45-77</p>
                 <h3>Lorem ipsum dolor sit</h3>
@@ -90,7 +90,7 @@
             </div>
             <div class="card">
                 <div class="imgbox">
-                <img src="img/hair1.jpg" width="100">
+                <img src="img/p3.png" width="100">
             </div>
                 <p>22-45-77</p>
                 <h3>Lorem ipsum dolor sit</h3>
@@ -103,7 +103,7 @@
             </div>
             <div class="card">
                 <div class="imgbox">
-                <img src="img/hair1.jpg" width="100">
+                <img src="img/p4.png" width="100">
             </div>
                 <p>22-45-77</p>
                 <h3>Lorem ipsum dolor sit</h3>
