--- a/index.html
+++ b/index.html
@@ -117,6 +117,28 @@
             
         </div>
     </div>
+    <footer>
+        <div class="sec">
+            <span class="fa-regular fa-credit-card"></span>
+            <h1>Flexible Payment</h1>
+            <p>Lorem ipsum dolor sit amet</p>
+        </div>
+        <div class="sec">
+            <span class="fa-regular fa-comment"></span>
+            <h1>Online  Supports</h1>
+            <p>Lorem ipsum dolor sit amet</p>
+        </div>
+        <div class="sec">
+            <span class="fa-brands fa-shopware"></span>
+            <h1>Brands</h1>
+            <p>Lorem ipsum dolor sit amet</p>
+        </div>
+        <div class="sec">
+            <span class="fa-regular fa-copyright"></span>
+            <h1> Copyright</h1>
+            <p>Lorem ipsum dolor sit amet</p>
+        </div>
+    </footer>
 </body>
 
 </html>
